# ai-chat-bot

./: pyproject.toml
api/app/: app.py
api/models/qwen/: qwen.py  qwen_api.py
models/gemma/: gemma-270m-test.ipynb
models/gpt-oss/: gpt-oss-tests.ipynb
models/qwen3/: qwen3-test.ipynb
models_tests/qwen3/: README.md
